[package]
name = "albums"
version = "46.2.0"
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-or-later"
authors = ["Max Rodriguez <me@maxrdz.com>"]
repository = "https://gitlab.gnome.org/maxrdz/Albums"
homepage = "https://gitlab.gnome.org/maxrdz/Albums"
publish = false

[package.metadata.urls]
issuetracker = "https://gitlab.gnome.org/maxrdz/Albums/issues"

[profile.release]
codegen-units = 1 # Best LLVM optimization when built on a single thread
opt-level = 3
lto = true
strip = true

[features]
default = []
disable-glycin-sandbox = []
use-feedbackd = ["dep:libfeedback"]

[dependencies]
async-channel = { version = "2.2" }
async-fs = { version = "2.1" }
async-process = { version = "2.2" }
async-semaphore = { version = "1.2" }
cfg-if = { version = "1" }
gdk = { version = "0.8", package = "gdk4", features = ["v4_14"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gio = { version = "0.19", features = ["v2_80"] }
glib-macros = { version = "0.19" }
glycin = { version = "1.0.2" }
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
libadwaita = { version = "0.6", features = ["v1_5"] }
libfeedback = { git = "https://gitlab.gnome.org/guidog/libfeedback-rs.git", optional = true }
md-5 = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

