option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'devel'
  ],
  value: 'default',
  description: 'The build profile for Memories. `default` or `devel`.'
)
option(
  'target',
  type: 'string',
  value: '',
  description: 'Rustc cross-compilation target triple. Default is an empty string, which compiles natively.'
)
option(
  'cross-verbose',
  type: 'boolean',
  value: false,
  description: 'Appends the -v flag when invoking cross. Applies if cross compiling.'
)
option(
  'use-feedbackd',
  type: 'boolean',
  value: false,
  description: 'Compiles Memories with support for feedbackd on mobile devices.'
)
